--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>Rehan Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>welcome to</h1>
+            <h1><span class="orange-color">Rehan Sardar</span> World!</h1>
+            <h3>bulid climber and stopper</h3>
+            <p>Mountaineering, or mountain climbing, is the sport of reaching, or trying to reach, high points in mountainous areas, mainly for the joy and thrill of the climb. The sport involves intense physical activity. It includes hiking, rock climbing, and traversing slopes covered with ice and snow.</p>
+            <a class="link-button" target="blank" href="https://www.linkedin.com/in/md-rehan-sardar-3422181b3/?midToken=AQFZjTtRpw3n7Q&midSig=1FtQJVz95MfFI1&trk=eml-email_network_conversations_01-header-16-profile&trkEmail=eml-email_network_conversations_01-header-16-profile-null-dsbf1e%7Ekmvhsda0%7Ehx-null-neptune%2Fprofile%7Evanity%2Eview">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            
+            <img src="images/my-bg.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
